2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/makepane.tcl (sn_make): Fix build dialog
	so that it does not flash on screen when first
	mapped. The toplevel must be withdrawn and
	then mapped after idle calculations are done.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/dialog.tcl (tk_dialog_with_widgets): Fix
	fast create dialog so that it is centered properly.
	The call to update idletasks needs to happen
	before the req width and height are calculated.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* gui/makepane.tcl (ExecMake): Pass only the Makefile
	name to the -f argument instead of passing a fully
	qualified path name. This should not change any
	functionality since the ExecMake command should
	cd to the proper directory first. Add some debug
	output and comments.

2003-02-11  Mo DeJong  <mdejong@users.sourceforge.net>

	* bitmaps/clsbr_private.xpm: Add small empty
	image to represent a private class member.
	* gui/utilities.tcl: Define cls_br_private_image
	with date from clsbr_private.xpm.
	* hyper/services.c (class_browser_insert): Use
	cls_br_private_image as the image when a member
	with PAF_PRIVATE access is found. Check for
	PAF_PRIVATE explicitly instead of just assuming
	that a non-public and non-protected member is
	private.

2003-01-11  Ian Roxborough  <irox@sbcglobal.net>

	* gui/projedit.tcl (print_file): Where possible
	use the directory of the first source file in
	a project as the default directory for the
	"Add Files" file selection dialog.

2003-01-11 Mo DeJong  <mdejong@uncounted.org>

	* etc/sn_cmp_g.pat: Add pattern to match a
	Win32 filename like d:/filename.c:856.
	* gui/grep.tcl (sn_goto_comp_error_or_grep):
	Remove hack to match a win32 path name
	like d:/filename.c:856, use regexp instead.
	* tests/gui/grep.test: Add path name test
	cases for sn_goto_comp_error_or_grep.

2002-11-27  Mo DeJong  <mdejong@uncounted.org>

	Added SN-512-2002-11-27 tag.
